@@ -17,11 +17,14 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 
+import org.eclipse.ditto.base.model.headers.DittoHeaders;
+import org.eclipse.ditto.base.model.json.JsonParsableCommand;
+import org.eclipse.ditto.base.model.json.JsonSchemaVersion;
+import org.eclipse.ditto.base.model.signals.commands.CommandJsonDeserializer;
 import org.eclipse.ditto.json.JsonArray;
 import org.eclipse.ditto.json.JsonCollectors;
 import org.eclipse.ditto.json.JsonFactory;
@@ -30,10 +33,6 @@ import org.eclipse.ditto.json.JsonFieldDefinition;
 import org.eclipse.ditto.json.JsonObject;
 import org.eclipse.ditto.json.JsonObjectBuilder;
 import org.eclipse.ditto.json.JsonValue;
-import org.eclipse.ditto.base.model.headers.DittoHeaders;
-import org.eclipse.ditto.base.model.json.JsonParsableCommand;
-import org.eclipse.ditto.base.model.json.JsonSchemaVersion;
-import org.eclipse.ditto.base.model.signals.commands.CommandJsonDeserializer;
 
 /**
  * Command which retrieves publicly available statistics about the stored Things currently present.
@@ -200,7 +199,7 @@ public final class RetrieveStatisticsDetails extends AbstractDevOpsCommand<Retri
     }
 
     private static List<String> toStringListOrThrow(final JsonArray jsonArray) {
-        return jsonArray.stream().map(JsonValue::asString).collect(Collectors.toList());
+        return jsonArray.stream().map(JsonValue::asString).toList();
     }
 
     /**
